# befriend-server

./: .gitignore  README.md  docker-compose.yml
src/: Dockerfile  pyproject.toml  requirements.txt
src/app/: dependency.py  main.py  test_main.py
src/app/controller/: user.py
src/app/model/: config.py
src/app/model/sqlite/: base.py  user.py
src/app/router/v1/: base.py  user.py
src/app/schema/: base.py  user.py
web/: Dockerfile  package-lock.json  package.json
web/src/: App.tsx
web/src/Api/: User.tsx
web/src/Components/: Login.tsx  Profile.tsx  Register.tsx  UsersList.tsx  WhoCheckedMe.tsx
web/src/Types/: base.tsx
